--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "tsc && node dist/app.js"
   },
   "dependencies": {
-    "ethers": "^5.5.2"
+    "ethers": "^5.5.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.5",
