--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.24.0",
     "ethers": "^5.5.2",
+    "express": "^4.17.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.5",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.8",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
   }
